plugins {
    id "java"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

tasks.named('processResources') {
    filesMatching('plugin.json') {
        expand(
                mcreatorVersionShort: project.mcreatorVersionShort,
                pluginVersion: project.pluginVersion
        )
    }
}

tasks.jar {
    archiveFileName.set("shaders-utils-${pluginVersion}-${mcreatorVersionShort}.zip")
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn(processResources, jar)

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))
    environment("MCREATOR_PLUGINS_DEV", "")

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    mainClass = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin) {
        test {
            useJUnitPlatform()
            include '**/GeneratorsTest.class'

            dependsOn rootProject.processResources
            dependsOn rootProject.jar

            environment("MCREATOR_PLUGINS_FOLDER", new File(rootProject.projectDir, "/build/libs"))
            environment("MCREATOR_PLUGINS_DEV", "")
            environment("MCREATOR_TEST_GENERATORS", "forge-1.19.4, forge-1.20.1")

            workingDir = mcreator_path
        }
    }
}